[gd_scene load_steps=25 format=3 uid="uid://bmpdf7ne2m1l2"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_mn06p"]
[ext_resource type="Texture2D" uid="uid://try1oxotn6qp" path="res://Assets/MV-SquireStyleOne-Transparent.png" id="2_2whfc"]
[ext_resource type="Script" path="res://Scenes/Player/AttackBox.gd" id="2_e45ww"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c03wb"]
atlas = ExtResource("2_2whfc")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8fs2"]
atlas = ExtResource("2_2whfc")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xew4"]
atlas = ExtResource("2_2whfc")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxagw"]
atlas = ExtResource("2_2whfc")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_llpfh"]
atlas = ExtResource("2_2whfc")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ejoq"]
atlas = ExtResource("2_2whfc")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_apmp5"]
atlas = ExtResource("2_2whfc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7to6"]
atlas = ExtResource("2_2whfc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oha0j"]
atlas = ExtResource("2_2whfc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7fdp"]
atlas = ExtResource("2_2whfc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl180"]
atlas = ExtResource("2_2whfc")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnfyi"]
atlas = ExtResource("2_2whfc")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wjob"]
atlas = ExtResource("2_2whfc")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkvfc"]
atlas = ExtResource("2_2whfc")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h46r2"]
atlas = ExtResource("2_2whfc")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgprq"]
atlas = ExtResource("2_2whfc")
region = Rect2(240, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_k61qo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c03wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8fs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xew4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxagw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llpfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ejoq")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apmp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7to6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oha0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7fdp")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl180")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnfyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wjob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkvfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h46r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgprq")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_8vacn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3hsj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5bck6"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ipq0r"]

[node name="Player" type="Area2D" groups=["player"]]
collision_mask = 3
script = ExtResource("1_mn06p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4.76837e-07, -8)
scale = Vector2(0.8125, 0.7475)
sprite_frames = SubResource("SpriteFrames_k61qo")
animation = &"idle"

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 1, 1)
scale = Vector2(10, 10)
texture = SubResource("PlaceholderTexture2D_8vacn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_g3hsj")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="AttackStartTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AttackOverTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3
script = ExtResource("2_e45ww")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
scale = Vector2(1.3, 1.2)
shape = SubResource("RectangleShape2D_5bck6")
disabled = true
debug_color = Color(0.956863, 0.172549, 0.301961, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="AttackBox"]
visible = false
modulate = Color(0.968627, 0.882353, 0.882353, 1)
scale = Vector2(13, 20)
texture = SubResource("PlaceholderTexture2D_ipq0r")

[node name="InvincibilityFrames" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AttackStartTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_body_entered"]
[connection signal="timeout" from="InvincibilityFrames" to="." method="_on_invincibility_frames_timeout"]
